Fixed alignment and floats

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -119,6 +119,10 @@ body {
 	width: 100%;
 }
 
+.sub .info {
+	float:left;
+}
+
 .sub h4 {
 	margin: 0px;
 	font-size: 1.5em;
